--- a/src/App.css
+++ b/src/App.css
@@ -64,9 +64,6 @@ body{
     box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.5);
 }
 
-.Add-btn:hover{
-    color: rgb(96, 224, 96);
-}
 .Add-btn:active{
     transform: scale(0.9);
 }
@@ -98,6 +95,18 @@ body{
     
 }
 
+.Todo-Edit-Input{
+    outline: none;
+    border: none;
+    width: 100%;
+    font-size: 20px;
+    font-weight: bolder;
+    border-radius: 5px;
+    padding: 8px 2px;
+    margin: 10px 0px;
+    color: red;
+}
+
 .edit-btn{
     font-size: 30px;
     cursor: pointer;
@@ -123,3 +132,10 @@ body{
     color: rgb(240, 54, 54);
     transform: scale(1.1);
 }
+
+.Add-btn:disabled{
+    background-color: #6c757d;
+    cursor: not-allowed;
+    opacity: 0.65;
+}
+
